--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/typeorm": "^10.0.1",
     "mysql2": "^3.9.1",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
   },
