--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
+DB_TYPE=mysql
 DB_DATABASE=testDB
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -8,3 +9,4 @@ DB_PASSWORD=Kangleon28
 DB_SYNC=true
 
 LOG_ON=false
+LOG_LEVEL=info
